--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="resume">
         <h1>My Résumé</h1>
         <ul class="nav-tabs">
-          <li class="nav-item"><a href="Vincent_Escueta_resume.pdf">Download</a> </li>
+          <li class="nav-item">"><button type="button" class="btn btn-link btn-lg"><a href="Vincent_Escueta_resume.pdf"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</a></button></li>
         </ul>
       </div>
     </section>
@@ -47,7 +47,7 @@
         <h1>Contact Me</h1>
         <ul class="nav-tabs" align="center">
           <li class="nav-item"><button type="button" class="btn btn-link btn-xs"><a href="vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
-          <li class="nav-item"><button type="button" class="btn btn-primary btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
+          <li class="nav-item"><button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
           <li class="nav-item"><button type="button" class="btn btn-link btn-xs"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
           <li class="nav-item"><button type="button" class="btn btn-link btn-xs"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
         </ul>
