--- a/index.html
+++ b/index.html
@@ -37,19 +37,16 @@
     <section id="resume" class="container content-section text-center">
       <div class="resume">
         <h1>My Résumé</h1>
-        <ul class="nav-tabs">
-          <li class="nav-item"><a><button type="button" class="btn btn-secondary btn-lg"><a href="Vincent_Escueta_resume.pdf"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</a></button></li>
-        </ul>
+        <p><a href="Vincent_Escueta_resume.pdf"><button type="button" class="btn btn-secondary btn-lg"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</button></a></p>
       </div>
     </section>
     <section id="contact-me" class="container content-section text-center">
       <div class="contact-me">
         <h1>Contact Me</h1>
-        <ul class="nav-tabs" align="center">
-          <li class="nav-item"><button type="button" class="btn btn-link btn-xs"><a href="vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
-          <li class="nav-item"><button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
-          <li class="nav-item"><button type="button" class="btn btn-link btn-xs"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
-          <li class="nav-item"><button type="button" class="btn btn-link btn-xs"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button></li>
+          <p><button type="button" class="btn btn-link btn-xs"><a href="vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+          <button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+          <button type="button" class="btn btn-link btn-xs"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+          <button type="button" class="btn btn-link btn-xs"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
         </ul>
       </div>
     </section>
