--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     <header class="title">
       <div class="title-body">
         <div class="container">
-          <h1>Vincent Escueta</h1>
-          <p> UC Berkeley EECS Undergrad</p>
+          <div class="col-md-8 col-md-offset-2">
+            <h1>Vincent Escueta</h1>
+            <p>UC Berkeley EECS Undergrad,<br/></p>
+          </div>
         </div>
       </div>
     </header>
