--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
         </div>
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="navbar-nav">
-            <li class="nav-item"><a href="#about-me">About Me</a></li>
-            <li class="nav-item"><a href="#resume">Résumé</a></li>
-            <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
+            <li class="nav-item"><a href="http://vincent-escueta22.github.io/Website/">Home</a></li>
+            <li class="nav-item"><a href="http://vincent-escueta22.github.io/About-Me/">About Me</a></li>
+            <li class="nav-item"><a href="http://vincent-escueta22.github.io/Resume/">Résumé</a></li>
+            <li class="nav-item"><a href="http://vincent-escueta22.github.io/Contact-Me">Contact Me</a></li>
           </ul>
         </div>
       </div>
     </div>
-    <header class="title">
+    <header class="title text-center">
       <div class="title-body">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
