--- a/About-Me.html
+++ b/About-Me.html
@@ -17,7 +17,7 @@
           <ul class="navbar-nav">
             <li class="nav-item"><a href="http://vincent-escueta22.github.io/Website/">Home</a></li>
             <li class="nav-item"><a href="About-Me.html">About Me</a></li>
-            <li class="nav-item"><a href="http://vincent-escueta22.github.io/Resume/">Résumé</a></li>
+            <li class="nav-item"><a href="Resume.html">Résumé</a></li>
             <li class="nav-item"><a href="http://vincent-escueta22.github.io/Contact-Me">Contact Me</a></li>
           </ul>
         </div>
@@ -28,8 +28,9 @@
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>About Me</h1>
-            <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33">
-            <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.</p>
+            <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="159.67" height="189.67">
+            <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume which is in the link below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.<br/>
+            <a href="Resume.html">Check out my Résumé</a></p>
           </div>
         </div>
       </div>
