--- a/About-Me.html
+++ b/About-Me.html
@@ -24,6 +24,11 @@
       </div>
     </div>
     <header class="about-me text-center">
+      <div class="about-me-picture">
+        <div class="col-md-4">
+          <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="159.67" height="189.67">
+        </div>
+      </div>
       <div class="about-me-body">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
