--- a/About-Me.html
+++ b/About-Me.html
@@ -25,8 +25,10 @@
     </div>
     <header class="about-me text-center">
       <div class="about-me-picture">
-        <div class="col-md-6">
-          <p><img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="159.67" height="189.67"></p>
+        <div class="container">
+          <div class="col-md-6">
+            <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="159.67" height="189.67">
+          <div class="container">
         </div>
       </div>
       <div class="about-me-body">
