--- a/About-Me.html
+++ b/About-Me.html
@@ -23,15 +23,15 @@
         </div>
       </div>
     </div>
-    <header class="about-me text-center">
+    <header class="about-me">
      <div class="container">
       <div class="row">
-        <div class="about-me-picture">
+        <div class="about-me-picture text-right">
             <div class="col-md-6">
               <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="159.67" height="189.67">
             </div>
         </div>
-        <div class="about-me-body">
+        <div class="about-me-body text-center">
             <div class="col-md-6">
               <h1>About Me</h1>
               <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my resume which is in the link below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.<br/>
