--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -28,7 +28,7 @@
         <div class="container">
           <div class="col-lg-5">
             <h1>Contact Me</h1>
-              <p><button type="button" class="btn btn-link btn-xs"><a href="vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+              <p><button type="button" class="btn btn-link btn-xs"><a href="mailto:vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
               <button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
               <button type="button" class="btn btn-link btn-xs"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
               <button type="button" class="btn btn-link btn-xs"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
