--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="navbar-nav">
             <li class="nav-item"><a href="http://vincent-escueta22.github.io/Website/">Home</a></li>
-            <li class="nav-item"><a href="About-Me.html">About Me</a></li>
-            <li class="nav-item"><a href="Resume.html">Résumé</a></li>
-            <li class="nav-item"><a href="Contact-Me.html">Contact Me</a></li>
+            <li class="nav-item"><a href="#about-me">About Me</a></li>
+            <li class="nav-item"><a href="#resume">Résumé</a></li>
+            <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
           </ul>
         </div>
       </div>
     </div>
     <header class="title text-center">
-      <div class="title-body">
+      <div class="title-body" id="about-me">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>Vincent Escueta</h1>
@@ -34,7 +34,7 @@
       </div>
     </header>
     <header class="about-me">
-     <div class="container">
+     <div class="container" id="resume">
       <div class="row">
         <div class="about-me-picture text-right">
             <div class="col-md-5">
@@ -52,7 +52,7 @@
      </div>
     </header>
     <header class="resume text-center">
-      <div class="resume-body">
+      <div class="resume-body" id="contact-me">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>My Résumé</h1>
@@ -63,7 +63,7 @@
       </div>
     </header>
     <header class="contact-me text-center">
-      <div class="contact-me-body">
+      <div class="contact-me-body" id="contact-me">
         <div class="container">
           <div class="col-md-5 col-md-offset-1">
             <h1>Contact Me</h1>
