--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="navbar-nav">
-            <li class="nav-item"><a href="http://vincent-escueta22.github.io/Website/">Home</a></li>
+            <li class="nav-item"><a href="home">Home</a></li>
             <li class="nav-item"><a href="#about-me">About Me</a></li>
             <li class="nav-item"><a href="#resume">Résumé</a></li>
             <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
@@ -24,7 +24,7 @@
       </div>
     </div>
     <header class="title text-center">
-      <div class="title-body" id="about-me">
+      <div class="title-body" id="home">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>Vincent Escueta</h1>
@@ -34,7 +34,7 @@
       </div>
     </header>
     <header class="about-me">
-     <div class="container" id="resume">
+     <div class="container" id="about-me">
       <div class="row">
         <div class="about-me-picture text-right">
             <div class="col-md-5">
@@ -52,7 +52,7 @@
      </div>
     </header>
     <header class="resume text-center">
-      <div class="resume-body" id="contact-me">
+      <div class="resume-body" id="resume">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>My Résumé</h1>
