--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -14,12 +14,14 @@
           <p>Vincent Escueta</p>
         </div>
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+         <div class="container">
           <ul class="navbar-nav">
             <li class="nav-item"><a href="http://vincent-escueta22.github.io/Website/">Home</a></li>
             <li class="nav-item"><a href="About-Me.html">About Me</a></li>
             <li class="nav-item"><a href="Resume.html">Résumé</a></li>
             <li class="nav-item"><a href="Contact-Me.html">Contact Me</a></li>
           </ul>
+         </div>
         </div>
       </div>
     </div>
