--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </header>
     <header class="about-me">
-      <div class "about-me-body" id="resume">
+      <div class "about-me-body" id="about-me">
        <div class="container">
         <div class="row">
           <div class="about-me-picture text-right">
@@ -67,7 +67,7 @@
     <header class="contact-me text-center">
       <div class="contact-me-body" id="contact-me">
         <div class="container">
-          <div class="col-md-5 col-md-offset-2">
+          <div class="col-md-5 col-md-offset-1">
             <h1>Contact Me</h1>
               <p><button type="button" class="btn btn-link btn-xs"><a href="mailto:vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
               <button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
