--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>My Résumé</h1>
-              <p><a href="Vincent_Escueta_resume.pdf"><button type="button" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</button></a></p>
+              <p><a href="Vincent_Escueta_resume.pdf"><button type="button" class="btn btn-primary-outline btn-lg"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</button></a></p>
           </div>
         </div>
       </div>
