--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
           </div>
         </div>
       </div>
+      <div class="title-links">
+        <div class="container">
+          <div class="col-md-4">
+            <div class="thumbnail">
+          <a href="#about-me">Read more about me</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail">
+          <a href="#about-me"><img src="Vincent_Escueta_resume.png"></a>
+          </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail">
+          <a href="#about-me">See how to contact me</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
     <header class="about-me">
       <div class "about-me-body" id="about-me">
@@ -45,7 +64,7 @@
           <div class="about-me-body text-center">
               <div class="col-md-6">
                 <h1>About Me</h1>
-                <p>Hi! I am Vincent Escueta from Diamond Bar, California and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my resume in the section below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.</p>
+                <p>Hi! I am Vincent Escueta from Diamond Bar, California and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my résumé in the section below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.</p>
                 
             </div>
           </div>
