--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
           </div>
         </div>
-      </div
+      </div>
     </header>
     <header class="about-me">
       <div class "about-me-body" id="about-me">
