--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Calm, Cooperative, and Charasmatic</h3>
-                        <p class="text-muted">Capable of working with others or being a leader.</p>
+                        <p class="text-muted">Capable of working with others and being a leader.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -148,40 +148,40 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Computer Graphics
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    PathTracer
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <a href="cs184_proj_2/index.html" class="portfolio-box">
+                        <img src="cs184_proj_2/images/part6_phong.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Computer Graphics
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    GeoMenagerie
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <a href="cs184_proj_1/index.html" class="portfolio-box">
+                        <img src="cs184_proj_1/images/part8_competition.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Computer Graphics
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Rasterizester
                                 </div>
                             </div>
                         </div>
