--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/1.jpg" class="img-responsive" alt="" style="width:650px; height:350px">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="cs184_proj_2/index.html" class="portfolio-box">
-                        <img src="cs184_proj_2/images/part6_phong.png" class="img-responsive" alt="">
+                        <img src="cs184_proj_2/images/part6_phong.png" class="img-responsive" alt="" style="width:650px; height:350px">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
