--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="cs184_proj_2/index.html" class="portfolio-box">
-                        <img src="img/part6_phong.png" class="img-responsive" alt="">
+                        <img src="img/part6_phong.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
