--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
                         <h3>Computer Graphics</h3>
-                        <p class="text-muted"></p>
+                        <p class="text-muted">Rasterization, Geometry, Global Illumination, Light Tracing </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Animation</h3>
-                        <p class="text-muted">Remember to consider the needs of others while taking care of myself.</p>
+                        <p class="text-muted">Modeling, Shading, Texturing, Lighting, Rigging, ,Animating</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
